modified jenkins file

--- a/inventory-app/Jenkinsfile
+++ b/inventory-app/Jenkinsfile
@@ -7,7 +7,19 @@ pipeline {
             echo "$GIT_BRANCH"
          }
       }
+       stage('Docker Build') {
+        steps {
+        pwsh(script: 'docker images -a')
+        pwsh(script: """
+        cd inventory-app/
+        docker images -a
+        docker build -t inventoryfrnt .
+        docker images -a
+        cd ..
 
+        """)
+        }
+      }
 }
 
 }
